:icons: font

= Gentics Mesh Changelog

== 0.10.1 (TBD)

icon:plus[] Clustering: Added link:https://getmesh.io/docs/beta/clustering.html#_node_discovery[documentation] and support for cluster configurations which use a list of static IPs instead of multicast discovery.

icon:check[] GraphQL: Updated graphiql browser to latest version to fix various issues when using aliases.

== 0.10.0 (04.09.2017)

icon:plus[] Clustering: This release introduces the master-master clustering support. You can read more about clustering and the configuration in the link:/docs/beta/clustering.html[clustering documentation].

icon:plus[] Manual Change: Configuration changes. The `clusterMode` setting has been deprecated in favour of the new cluster configuration. This setting must be removed from the `mesh.yml` file.

icon:plus[] Manual Change: The configuration files `mesh.yml`, `keystore.jceks` must be moved to a subfolder `config` folder.

[source,bash]
----
mkdir config
mv mesh.yml config
mv keystore.jceks config
----

icon:plus[] Manual Change: The graph database folder needs to be moved. Please create the `storage` subfolder and move the existing data into that folder.

[source,bash]
----
mkdir -p data/graphdb/storage
mv data/graphdb/* data/graphdb/storage/
----

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.26

icon:plus[] REST: The `/api/v1/admin/consistency/check` endpoint has been added. The endpoint can be used to verify the database integrity.

icon:check[] Core: Fixed missing OrientDB roles and users for some older graph databases. Some graph databases did not create the needed OrientDB user and roles. These roles and users are needed for the OrientDB server and are different from Gentics Mesh users and roles.

icon:check[] REST: Invalid date strings were not correctly handled. An error will now be thrown if a date string can't be parsed.

icon:check[] REST: The delete handling has been updated.