@@ -1,7 +1,6 @@
 package com.gentics.mesh.parameter.impl;
 
 import static com.gentics.mesh.core.rest.error.Errors.error;
-import static com.gentics.mesh.util.NumberUtils.toInteger;
 import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 
 import java.util.HashMap;
@@ -10,7 +9,6 @@ import java.util.Map;
 import org.raml.model.ParamType;
 import org.raml.model.parameter.QueryParameter;
 
-import com.gentics.mesh.etc.config.ImageManipulatorOptions;
 import com.gentics.mesh.handler.ActionContext;
 import com.gentics.mesh.parameter.AbstractParameters;
 import com.gentics.mesh.parameter.ImageManipulationParameters;
@@ -31,77 +29,6 @@ public class ImageManipulationParametersImpl extends AbstractParameters implemen
 	@Override
 	public String getName() {
 		return "Image manipulation parameters";
-	}
-
-	@Override
-	public Integer getWidth() {
-		return toInteger(getParameter(WIDTH_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setWidth(Integer width) {
-		setParameter(WIDTH_QUERY_PARAM_KEY, String.valueOf(width));
-		return this;
-	}
-
-	@Override
-	public Integer getHeight() {
-		return toInteger(getParameter(HEIGHT_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setHeight(Integer height) {
-		setParameter(HEIGHT_QUERY_PARAM_KEY, String.valueOf(height));
-		return this;
-	}
-
-	@Override
-	public Integer getStartx() {
-		return toInteger(getParameter(CROP_X_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setStartx(Integer startx) {
-		setParameter(CROP_X_QUERY_PARAM_KEY, String.valueOf(startx));
-		return this;
-	}
-
-	@Override
-	public Integer getStarty() {
-		return toInteger(getParameter(CROP_Y_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setStarty(Integer starty) {
-		setParameter(CROP_Y_QUERY_PARAM_KEY, String.valueOf(starty));
-		return this;
-	}
-
-	@Override
-	public Integer getCroph() {
-		return toInteger(getParameter(CROP_HEIGHT_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setCroph(Integer croph) {
-		setParameter(CROP_HEIGHT_QUERY_PARAM_KEY, String.valueOf(croph));
-		return this;
-	}
-
-	@Override
-	public Integer getCropw() {
-		return toInteger(getParameter(CROP_WIDTH_QUERY_PARAM_KEY), null);
-	}
-
-	@Override
-	public ImageManipulationParameters setCropw(Integer cropw) {
-		setParameter(CROP_WIDTH_QUERY_PARAM_KEY, String.valueOf(cropw));
-		return this;
-	}
-
-	@Override
-	public boolean isSet() {
-		return getWidth() != null || getHeight() != null || getCroph() != null || getCropw() != null || getStartx() != null || getStarty() != null;
 	}
 
 	/**
@@ -153,54 +80,6 @@ public class ImageManipulationParametersImpl extends AbstractParameters implemen
 
 		}
 
-	}
-
-	@Override
-	public boolean hasAllCropParameters() {
-		return getCroph() != null && getCropw() != null && getStartx() != null && getStarty() != null;
-	}
-
-	@Override
-	public void validateCropBounds(int imageWidth, int imageHeight) {
-		if (getStartx() + getCropw() > imageWidth || getStarty() + getCroph() > imageHeight) {
-			throw error(BAD_REQUEST, "image_error_crop_out_of_bounds", String.valueOf(imageWidth), String.valueOf(imageHeight));
-		}
-	}
-
-	@Override
-	public String getCacheKey() {
-
-		StringBuilder builder = new StringBuilder();
-
-		if (getStartx() != null) {
-			builder.append("cx" + getStartx());
-		}
-		if (getStarty() != null) {
-			builder.append("cy" + getStarty());
-		}
-		if (getCropw() != null) {
-			builder.append("cw" + getCropw());
-		}
-		if (getCroph() != null) {
-			builder.append("ch" + getCroph());
-		}
-		if (getWidth() != null) {
-			builder.append("rw" + getWidth());
-		}
-		if (getHeight() != null) {
-			builder.append("rh" + getHeight());
-		}
-		return builder.toString();
-	}
-
-	@Override
-	public void validateLimits(ImageManipulatorOptions options) {
-		if (getWidth() != null && options.getMaxWidth() != null && options.getMaxWidth() > 0 && getWidth() > options.getMaxWidth()) {
-			throw error(BAD_REQUEST, "image_error_width_limit_exceeded", String.valueOf(options.getMaxWidth()), String.valueOf(getWidth()));
-		}
-		if (getHeight() != null && options.getMaxHeight() != null && options.getMaxHeight() > 0 && getHeight() > options.getMaxHeight()) {
-			throw error(BAD_REQUEST, "image_error_height_limit_exceeded", String.valueOf(options.getMaxHeight()), String.valueOf(getHeight()));
-		}
 	}
 
 	@Override
