@@ -1,8 +1,5 @@
 package com.gentics.mesh.parameter.impl;
 
-import static com.gentics.mesh.core.rest.error.Errors.error;
-import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
-
 import java.util.HashMap;
 import java.util.Map;
 
@@ -12,7 +9,6 @@ import org.raml.model.parameter.QueryParameter;
 import com.gentics.mesh.handler.ActionContext;
 import com.gentics.mesh.parameter.AbstractParameters;
 import com.gentics.mesh.parameter.VersioningParameters;
-import com.gentics.mesh.util.VersionNumber;
 
 //TODO split this class into two since some actions are not versioning specific but release specific 
 public class VersioningParametersImpl extends AbstractParameters implements VersioningParameters {
@@ -22,45 +18,6 @@ public class VersioningParametersImpl extends AbstractParameters implements Vers
 	}
 
 	public VersioningParametersImpl() {
-	}
-
-	@Override
-	public String getVersion() {
-		String version = "draft";
-		String versionParameter = getParameter(VERSION_QUERY_PARAM_KEY);
-		if (versionParameter != null) {
-			if ("draft".equalsIgnoreCase(versionParameter) || "published".equalsIgnoreCase(versionParameter)) {
-				version = versionParameter;
-			} else {
-				try {
-					version = new VersionNumber(versionParameter).toString();
-				} catch (IllegalArgumentException e) {
-					throw error(BAD_REQUEST, "error_illegal_version", versionParameter);
-				}
-			}
-		}
-		return version;
-	}
-
-	@Override
-	public VersioningParameters setVersion(String version) {
-		setParameter(VERSION_QUERY_PARAM_KEY, version);
-		return this;
-	}
-
-	@Override
-	public VersioningParameters draft() {
-		return setVersion("draft");
-	}
-
-	@Override
-	public VersioningParameters published() {
-		return setVersion("published");
-	}
-
-	@Override
-	public String getRelease() {
-		return getParameter(RELEASE_QUERY_PARAM_KEY);
 	}
 
 	@Override
@@ -89,7 +46,8 @@ public class VersioningParametersImpl extends AbstractParameters implements Vers
 		// version
 		QueryParameter versionParameter = new QueryParameter();
 		versionParameter.setDefaultValue("draft");
-		versionParameter.setDescription("Specifies the version to be loaded. Can either be published/draft or version number. e.g.: _0.1_, _1.0_, _draft_, _published_.");
+		versionParameter.setDescription(
+				"Specifies the version to be loaded. Can either be published/draft or version number. e.g.: _0.1_, _1.0_, _draft_, _published_.");
 		versionParameter.setExample("1.1");
 		versionParameter.setRequired(false);
 		versionParameter.setType(ParamType.STRING);
