@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.ImageManipulationParameters;
+
+public class ImageManipulationParametersImpl extends AbstractParameters implements ImageManipulationParameters {
+
+}
