@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.PagingParameters;
+
+public class PagingParametersImpl extends AbstractParameters implements PagingParameters {
+
+}
