@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.PublishParameters;
+
+public class PublishParametersImpl extends AbstractParameters implements PublishParameters {
+
+}
