@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.SchemaUpdateParameters;
+
+public class SchemaUpdateParametersImpl  extends AbstractParameters implements SchemaUpdateParameters {
+
+}
