@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.UserParameters;
+
+public class UserParametersImpl extends AbstractParameters implements UserParameters {
+
+}
