@@ -1,0 +1,7 @@
+package com.gentics.mesh.parameter.client;
+
+import com.gentics.mesh.parameter.VersioningParameters;
+
+public class VersioningParametersImpl  extends AbstractParameters implements VersioningParameters {
+
+}
