@@ -1,5 +1,9 @@
 package com.gentics.mesh.parameter;
 
+import static com.gentics.mesh.core.rest.error.Errors.error;
+import static com.gentics.mesh.util.NumberUtils.toInteger;
+import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
+
 import com.gentics.mesh.etc.config.ImageManipulatorOptions;
 
 public interface ImageManipulationParameters extends ParameterProvider {
@@ -18,7 +22,9 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * 
 	 * @return
 	 */
-	Integer getWidth();
+	default Integer getWidth() {
+		return toInteger(getParameter(WIDTH_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the image width.
@@ -26,14 +32,19 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param width
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setWidth(Integer width);
+	default ImageManipulationParameters setWidth(Integer width) {
+		setParameter(WIDTH_QUERY_PARAM_KEY, String.valueOf(width));
+		return this;
+	}
 
 	/**
 	 * Return the image height.
 	 * 
 	 * @return
 	 */
-	Integer getHeight();
+	default Integer getHeight() {
+		return toInteger(getParameter(HEIGHT_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the image height.
@@ -41,14 +52,19 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param height
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setHeight(Integer height);
+	default ImageManipulationParameters setHeight(Integer height) {
+		setParameter(HEIGHT_QUERY_PARAM_KEY, String.valueOf(height));
+		return this;
+	}
 
 	/**
 	 * Return the crop x-axis start coordinate.
 	 * 
 	 * @return
 	 */
-	Integer getStartx();
+	default Integer getStartx() {
+		return toInteger(getParameter(CROP_X_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the crop x-axis start coordinate.
@@ -56,14 +72,19 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param startx
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setStartx(Integer startx);
+	default ImageManipulationParameters setStartx(Integer startx) {
+		setParameter(CROP_X_QUERY_PARAM_KEY, String.valueOf(startx));
+		return this;
+	}
 
 	/**
 	 * Return the crop y-axis start coordinate.
 	 * 
 	 * @return
 	 */
-	Integer getStarty();
+	default Integer getStarty() {
+		return toInteger(getParameter(CROP_Y_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the crop y-axis start coordinate.
@@ -71,14 +92,19 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param starty
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setStarty(Integer starty);
+	default ImageManipulationParameters setStarty(Integer starty) {
+		setParameter(CROP_Y_QUERY_PARAM_KEY, String.valueOf(starty));
+		return this;
+	}
 
 	/**
 	 * Return the crop height.
 	 * 
 	 * @return
 	 */
-	Integer getCroph();
+	default Integer getCroph() {
+		return toInteger(getParameter(CROP_HEIGHT_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the crop height.
@@ -86,14 +112,19 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param croph
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setCroph(Integer croph);
+	default ImageManipulationParameters setCroph(Integer croph) {
+		setParameter(CROP_HEIGHT_QUERY_PARAM_KEY, String.valueOf(croph));
+		return this;
+	}
 
 	/**
 	 * Return the crop width.
 	 * 
 	 * @return
 	 */
-	Integer getCropw();
+	default Integer getCropw() {
+		return toInteger(getParameter(CROP_WIDTH_QUERY_PARAM_KEY), null);
+	}
 
 	/**
 	 * Set the crop width.
@@ -101,20 +132,33 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param cropw
 	 * @return Fluent API
 	 */
-	ImageManipulationParameters setCropw(Integer cropw);
+	default ImageManipulationParameters setCropw(Integer cropw) {
+		setParameter(CROP_WIDTH_QUERY_PARAM_KEY, String.valueOf(cropw));
+		return this;
+	}
 
 	/**
 	 * Check whether all required crop parameters have been set.
 	 * 
 	 * @param options
 	 */
-	void validateLimits(ImageManipulatorOptions options);
+	default void validateLimits(ImageManipulatorOptions options) {
+		if (getWidth() != null && options.getMaxWidth() != null && options.getMaxWidth() > 0 && getWidth() > options.getMaxWidth()) {
+			throw error(BAD_REQUEST, "image_error_width_limit_exceeded", String.valueOf(options.getMaxWidth()), String.valueOf(getWidth()));
+		}
+		if (getHeight() != null && options.getMaxHeight() != null && options.getMaxHeight() > 0 && getHeight() > options.getMaxHeight()) {
+			throw error(BAD_REQUEST, "image_error_height_limit_exceeded", String.valueOf(options.getMaxHeight()), String.valueOf(getHeight()));
+		}
+	}
 
 	/**
 	 * Check whether all needed crop parameters have been set.
+	 * 
 	 * @return
 	 */
-	boolean hasAllCropParameters();
+	default boolean hasAllCropParameters() {
+		return getCroph() != null && getCropw() != null && getStartx() != null && getStarty() != null;
+	}
 
 	/**
 	 * Validate the image crop parameters and check whether those would exceed the source image dimensions.
@@ -122,20 +166,48 @@ public interface ImageManipulationParameters extends ParameterProvider {
 	 * @param imageWidth
 	 * @param imageHeight
 	 */
-	void validateCropBounds(int imageWidth, int imageHeight);
+	default void validateCropBounds(int imageWidth, int imageHeight) {
+		if (getStartx() + getCropw() > imageWidth || getStarty() + getCroph() > imageHeight) {
+			throw error(BAD_REQUEST, "image_error_crop_out_of_bounds", String.valueOf(imageWidth), String.valueOf(imageHeight));
+		}
+	}
 
 	/**
 	 * Generate cache key.
 	 * 
 	 * @return
 	 */
-	String getCacheKey();
+	default String getCacheKey() {
+		StringBuilder builder = new StringBuilder();
+
+		if (getStartx() != null) {
+			builder.append("cx" + getStartx());
+		}
+		if (getStarty() != null) {
+			builder.append("cy" + getStarty());
+		}
+		if (getCropw() != null) {
+			builder.append("cw" + getCropw());
+		}
+		if (getCroph() != null) {
+			builder.append("ch" + getCroph());
+		}
+		if (getWidth() != null) {
+			builder.append("rw" + getWidth());
+		}
+		if (getHeight() != null) {
+			builder.append("rh" + getHeight());
+		}
+		return builder.toString();
+	}
 
 	/**
 	 * Check whether any of the parameters is set.
 	 * 
 	 * @return
 	 */
-	boolean isSet();
+	default boolean isSet() {
+		return getWidth() != null || getHeight() != null || getCroph() != null || getCropw() != null || getStartx() != null || getStarty() != null;
+	}
 
 }
