@@ -2,12 +2,16 @@ package com.gentics.mesh.parameter;
 
 public interface UserParameters extends ParameterProvider {
 
+	public static final String TOKEN_PARAMETER_KEY = "token";
+
 	/**
 	 * Return the token code which was set.
 	 * 
 	 * @return
 	 */
-	String getToken();
+	default String getToken() {
+		return getParameter(TOKEN_PARAMETER_KEY);
+	}
 
 	/**
 	 * Set the one time token which can be used to update the user even if the credentials don't allow it otherwise.
@@ -15,5 +19,8 @@ public interface UserParameters extends ParameterProvider {
 	 * @param token
 	 * @return Fluent API
 	 */
-	UserParameters setToken(String token);
+	default UserParameters setToken(String token) {
+		setParameter(TOKEN_PARAMETER_KEY, token);
+		return this;
+	}
 }
